--- a/index.html
+++ b/index.html
@@ -42,72 +42,95 @@
                 </li>
             </ul>
             <!-- Menú pequeño -->
-            <ul id="menu-mobile" class="flex flex-col gap-10 items-center lg:hidden absolute top-20 h-full right-0 bg-[#122565] py-10 px-8 transform translate-x-full opacity-0 transition-all duration-500 ease-in-out" style="width: 60%;">
+            <ul id="menu-mobile" class="flex flex-col gap-10 items-center lg:hidden absolute top-20 h-full right-0 bg-[#275c74] py-10 px-8 transform translate-x-full opacity-0 transition-all duration-500 ease-in-out" style="width: 60%;">
                 <li class="flex gap-2 items-center">
-                    <a id="btn-categorias" class="styles_li cursor-pointer">CATEGORIAS</a>
+                    <a id="btn_inicio" class="styles_li cursor-pointer">INICIO</a>
+                </li>
+                <li class="flex gap-2 items-center">
+                    <a id="btn-categorias" class="styles_li cursor-pointer">MEDICAMENTOS</a>
                     <img class="w-3 h-3 red" src="assets/img/icons8-adelante-50.png" alt="">
                 </li>
                 <li class="flex gap-2 items-center">
-                    <a id="btn-perfumeria" class="styles_li cursor-pointer">PERFUMERIA</a>
+                    <a id="btn-perfumeria" class="styles_li cursor-pointer">DERMOCOSMETICA</a>
                     <img class="w-3 h-3 red" src="assets/img/icons8-adelante-50.png" alt="">
                 </li>
                 <li class="flex gap-2 items-center">
-                    <a id="btn-productos" class="styles_li cursor-pointer">PRODUCTOS</a>
+                    <a id="btn-productos" class="styles_li cursor-pointer">PERFUMES</a>
                     <img class="w-3 h-3 red" src="assets/img/icons8-adelante-50.png" alt="">
                 </li>
+                <li class="li_contacto">
+                    <img src="assets/img/icons8-llamada-entrante-50(1).png" alt="teléfono">
+                    <p>+3576 12679812</p>
+                </li>
+                <button class="btn_moderno">Reservar cita</button>
             </ul>
             <!-- Menú Categorias -->
-            <ul id="menu-mobile2" class="flex flex-col gap-10 items-center lg:hidden absolute top-20 h-full right-0 bg-[#122565] py-10 px-8 transform translate-x-full opacity-0 transition-all duration-500 ease-in-out" style="width: 60%;">
+            <ul id="menu-mobile2" class="flex flex-col gap-4 items-center lg:hidden absolute top-20 h-full right-0 bg-[#275c74] py-10 px-8 transform translate-x-full opacity-0 transition-all duration-500 ease-in-out" style="width: 60%;">
                 <li class="flex gap-2 items-center">
-                    <H2 class="li_titulos ">CATEGORIAS</H2>
+                    <a class="li_volver cursor-pointer" id="btn-volver1">⬅ VOLVER</a>
                 </li>
                 <li class="flex gap-2 items-center">
-                    <a class="styles_li cursor-pointer" id="btn-volver1">⬅ VOLVER</a>
+                    <H2 class="li_titulos ">MEDICAMENTOS</H2>
                 </li>
                 <li class="flex gap-2 items-center">
-                    <a class="styles_li" href="">CATEGORÍA 1</a>
+                    <a class="styles_li m-3" href="">ANALGESTICOS</a>
                 </li>
                 <li class="flex gap-2 items-center">
-                    <a class="styles_li" href="">CATEGORÍA 2</a>
+                    <a class="styles_li m-3" href="">VITAMINAS</a>
                 </li>
                 <li class="flex gap-2 items-center">
-                    <a class="styles_li" href="">CATEGORÍA 3</a>
+                    <a class="styles_li m-3" href="">ANTIBIOTICOS</a>
+                </li>
+                <li class="flex gap-2 items-center">
+                    <a class="styles_li m-3" href="">ANTIINFLAMATORIOS</a>
+                </li>
+                <li class="flex gap-2 items-center">
+                    <a class="styles_li m-3" href="">DIGESTIVOS</a>
                 </li>
             </ul>
             <!-- Menú Perfumes -->
-            <ul id="menu-mobile3" class="flex flex-col gap-10 items-center lg:hidden absolute top-20 h-full right-0 bg-[#122565] py-10 px-8 transform translate-x-full opacity-0 transition-all duration-500 ease-in-out" style="width: 60%;">
+            <ul id="menu-mobile3" class="flex flex-col gap-4 items-center lg:hidden absolute top-20 h-full right-0 bg-[#275c74] py-10 px-8 transform translate-x-full opacity-0 transition-all duration-500 ease-in-out" style="width: 60%;">
+                <li class="flex gap-2 items-center">
+                    <a class="li_volver cursor-pointer" id="btn-volver2">⬅ VOLVER</a>
+                </li>
+                <li class="flex gap-2 items-center">
+                    <H2 class="li_titulos ">DERMOCOSMETICA</H2>
+                </li>
+                <li class="flex gap-2 items-center">
+                    <a class="styles_li m-3" href="">CREMAS FACIALES</a>
+                </li>
+                <li class="flex gap-2 items-center">
+                    <a class="styles_li m-3" href="">PROTECTORES SOLARES</a>
+                </li>
+                <li class="flex gap-2 items-center">
+                    <a class="styles_li m-3" href="">LIMPIEZA FACIAL</a>
+                </li>
+                <li class="flex gap-2 items-center">
+                    <a class="styles_li m-3" href="">ANTI-EDAD</a>
+                </li>
+                <li class="flex gap-2 items-center">
+                    <a class="styles_li m-3" href="">TRATAMIENTO-CORPORAL</a>
+                </li>
+            </ul>
+            <!-- Menú Productos -->
+            <ul id="menu-mobile4" class="flex flex-col gap-4 items-center lg:hidden absolute top-20 h-full right-0 bg-[#275c74] py-10 px-8 transform translate-x-full opacity-0 transition-all duration-500 ease-in-out" style="width: 60%;">
+                <li class="flex gap-2 items-center">
+                    <a class="li_volver cursor-pointer" id="btn-volver3">⬅ VOLVER</a>
+                </li>
                 <li class="flex gap-2 items-center">
                     <H2 class="li_titulos ">PERFUMES</H2>
                 </li>
                 <li class="flex gap-2 items-center">
-                    <a class="styles_li cursor-pointer" id="btn-volver2">⬅ VOLVER</a>
+                    <a class="styles_li m-3" href="">PERFUMES HOMBRES</a>
                 </li>
                 <li class="flex gap-2 items-center">
-                    <a class="styles_li" href="">PERFUME 1</a>
+                    <a class="styles_li m-3" href="">PERFUMES MUJER</a>
                 </li>
                 <li class="flex gap-2 items-center">
-                    <a class="styles_li" href="">PERFUME 2</a>
+                    <a class="styles_li m-3" href="">PERFUMES UNISEX</a>
                 </li>
                 <li class="flex gap-2 items-center">
-                    <a class="styles_li" href="">PERFUME 3</a>
-                </li>
-            </ul>
-            <!-- Menú Productos -->
-            <ul id="menu-mobile4" class="flex flex-col gap-10 items-center lg:hidden absolute top-20 h-full right-0 bg-[#122565] py-10 px-8 transform translate-x-full opacity-0 transition-all duration-500 ease-in-out" style="width: 60%;">
-                <li class="flex gap-2 items-center">
-                    <H2 class="li_titulos ">PRODUCTOS</H2>
-                </li>
-                <li class="flex gap-2 items-center">
-                    <a class="styles_li cursor-pointer" id="btn-volver3">⬅ VOLVER</a>
-                </li>
-                <li class="flex gap-2 items-center">
-                    <a class="styles_li" href="">PRODUCTO 1</a>
-                </li>
-                <li class="flex gap-2 items-center">
-                    <a class="styles_li" href="">PRODUCTO 2</a>
-                </li>
-                <li class="flex gap-2 items-center">
-                    <a class="styles_li" href="">PRODUCTO 3</a>
+                    <a class="styles_li m-3" href="">COLONIAS</a>
                 </li>
             </ul>
         </nav>      
