--- a/index.html
+++ b/index.html
@@ -138,6 +138,6 @@
     <main></main>
     <footer></footer>
     <script src="index.js"></script>
-    <script src="./node_modules/flowbite/dist/flowbite.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
 </body>
 </html>
