--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="overflow-x-hidden">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,143 +10,86 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/output.css">
 </head>
-<body>
-    <header>
-        <nav class="flex lg:justify-center justify-between lg:gap-20 items-center w-full px-6 h-20">
-            <a href="">
-                <img src="assets/img/logo.png" class="h-20 w-20" alt="">
-            </a>
-            <button class="block lg:hidden">
-                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" class="justify-end"  viewBox="0 0 50 50">
-                    <path d="M 0 9 L 0 11 L 50 11 L 50 9 Z M 0 24 L 0 26 L 50 26 L 50 24 Z M 0 39 L 0 41 L 50 41 L 50 39 Z"></path>
+<body class="overflow-x-hidden ">
+    <header class="fixed top-0 left-0 w-full bg-white shadow z-50">
+        <div class="flex justify-between items-center py-2 px-4"">
+            <!-- Logo -->
+             <a href="index.html">
+                <img src="assets/img/logo.png" class="w-16 h-16" alt="">
+             </a>
+             <!-- MENU GRANDE -->
+              <nav class="hidden lg:flex gap-10 text-base font-medium text-[#275c74]">
+                <a href="#" class="hover:text-[#12b1be] transition-colors duration-300">Inicio<a>
+                <a href="#" class="hover:text-[#12b1be] transition-colors duration-300">Productos</a>
+                <a href="#" class="hover:text-[#12b1be] transition-colors duration-300">Servicios</a>
+                <a href="#" class="hover:text-[#12b1be] transition-colors duration-300">Contacto</a>
+            </nav>
+            <div class="flex items-center gap-4">
+            <img src="assets/img/icons8-carrito-de-compras-50.png" class="w-6 h-6" alt="">
+            <img src="assets/img/icons8-usuario-24.png" alt="Usuario" class="cursor-pointer hover:opacity-70 transition-opacity">
+                <!-- Botón menú móvil -->
+             <button id="btnAbrir" class="lg:hidden">
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="25" viewBox="0 0 50 50">
+                    <path d="M 3 9 A 1.0001 1.0001 0 1 0 3 11 L 47 11 A 1.0001 1.0001 0 1 0 47 9 L 3 9 z M 3 24 A 1.0001 1.0001 0 1 0 3 26 L 47 26 A 1.0001 1.0001 0 1 0 47 24 L 3 24 z M 3 39 A 1.0001 1.0001 0 1 0 3 41 L 47 41 A 1.0001 1.0001 0 1 0 47 39 L 3 39 z"></path>
                 </svg>
             </button>
-            <button id="boton_cruz" class="hidden lg:hidden">
-                <img src="assets/img/icons8-x-48.png" class="h-7 w-9" alt="">
-            </button>
-            <!-- Menú grande -->
-            <ul id="menu" class="justify-center gap-10 items-center hidden lg:flex">
-                <li>
-                    <a href="">CATEGORIAS</a>
-                </li>
-                <li>
-                    <a href="">PERFUMES</a>
-                </li>
-                <li>
-                    <a href="">PRODUCTOPS</a>
-                </li>
-                <li>
-                    <a href="">DERMOSGOASK</a>
-                </li>
-                <li>
-                    <a href="">CUIDADO PERSOANL</a>
-                </li>
-                <li>
-                    <a href="">SALUD</a>
-                </li>
-            </ul>
-            <!-- Menú pequeño -->
-            <ul id="menu-mobile" class="flex flex-col gap-10 items-center lg:hidden absolute top-20 h-full right-0 bg-[#275c74] py-10 px-8 transform translate-x-full opacity-0 transition-all duration-500 ease-in-out" style="width: 60%;">
-                <li class="flex gap-2 items-center">
-                    <a id="btn_inicio" class="styles_li cursor-pointer active">Inicio</a>
-                </li>
-                <li class="flex gap-2 items-center">
-                    <a id="btn-categorias" class="styles_li cursor-pointer">Medicamentos</a>
-                    <img class="w-3 h-3" src="assets/img/icons8-adelante-50.png" alt="">
-                </li>
-                <li class="flex gap-2 items-center">
-                    <a id="btn-perfumeria" class="styles_li cursor-pointer">Dermocosmetica</a>
-                    <img class="w-3 h-3" src="assets/img/icons8-adelante-50.png" alt="">
-                </li>
-                <li class="flex gap-2 items-center">
-                    <a id="btn-productos" class="styles_li cursor-pointer">Perfumes</a>
-                    <img class="w-3 h-3" src="assets/img/icons8-adelante-50.png" alt="">
-                </li>
-                <li class="li_contacto">
-                    <img src="assets/img/icons8-llamada-entrante-50(1).png" alt="teléfono">
-                    <p class="text-white">+3576 12679812</p>
-                </li>
-                <button class="btn_moderno">Reservar cita</button>
-            </ul>
-            <!-- Menú Categorias -->
-            <ul id="menu-mobile2" class="flex flex-col gap-4 items-center lg:hidden absolute top-20 h-full right-0 bg-[#275c74] py-10 px-8 transform translate-x-full opacity-0 transition-all duration-500 ease-in-out" style="width: 60%;">
-                <li class="flex gap-2 items-center">
-                    <a class="li_volver cursor-pointer" id="btn-volver1">⬅ Volver</a>
-                </li>
-                <li class="flex gap-2 items-center">
-                    <H2 class="li_titulos ">MEDICAMENTOS</H2>
-                </li>
-                <li class="flex gap-2 items-center">
-                    <a class="styles_li m-3" href="">Analgesticos</a>
-                </li>
-                <li class="flex gap-2 items-center">
-                    <a class="styles_li m-3" href="">Vitaminas</a>
-                </li>
-                <li class="flex gap-2 items-center">
-                    <a class="styles_li m-3" href="">Antibioticos</a>
-                </li>
-                <li class="flex gap-2 items-center">
-                    <a class="styles_li m-3" href="">Antiinflamatorios</a>
-                </li>
-                <li class="flex gap-2 items-center">
-                    <a class="styles_li m-3" href="">Digestivos</a>
-                </li>
-            </ul>
-            <!-- Menú Perfumes -->
-            <ul id="menu-mobile3" class="flex flex-col gap-4 items-center lg:hidden absolute top-20 h-full right-0 bg-[#275c74] py-10 px-8 transform translate-x-full opacity-0 transition-all duration-500 ease-in-out" style="width: 60%;">
-                <li class="flex gap-2 items-center">
-                    <a class="li_volver cursor-pointer" id="btn-volver2">⬅ Volver</a>
-                </li>
-                <li class="flex gap-2 items-center">
-                    <H2 class="li_titulos ">DERMOCOSMETICA</H2>
-                </li>
-                <li class="flex gap-2 items-center">
-                    <a class="styles_li m-3" href="">Cremas Faciales</a>
-                </li>
-                <li class="flex gap-2 items-center">
-                    <a class="styles_li m-3" href="">Protectores Solares</a>
-                </li>
-                <li class="flex gap-2 items-center">
-                    <a class="styles_li m-3" href="">Limpieza Facial</a>
-                </li>
-                <li class="flex gap-2 items-center">
-                    <a class="styles_li m-3" href="">Anti-Edad</a>
-                </li>
-            </ul>
-            <!-- Menú Productos -->
-            <ul id="menu-mobile4" class="flex flex-col gap-4 items-center lg:hidden absolute top-20 h-full right-0 bg-[#275c74] py-10 px-8 transform translate-x-full opacity-0 transition-all duration-500 ease-in-out" style="width: 60%;">
-                <li class="flex gap-2 items-center">
-                    <a class="li_volver cursor-pointer" id="btn-volver3">⬅ Volver</a>
-                </li>
-                <li class="flex gap-2 items-center">
-                    <H2 class="li_titulos ">PERFUMES</H2>
-                </li>
-                <li class="flex gap-2 items-center">
-                    <a class="styles_li m-3" href="">Perfumes Hombres</a>
-                </li>
-                <li class="flex gap-2 items-center">
-                    <a class="styles_li m-3" href="">Perfumes Mujer</a>
-                </li>
-                <li class="flex gap-2 items-center">
-                    <a class="styles_li m-3" href="">Perfumes Unisex</a>
-                </li>
-                <li class="flex gap-2 items-center">
-                    <a class="styles_li m-3" href="">Colonias</a>
-                </li>
-            </ul>
-        </nav>      
+            </div>            
+        </div>
     </header>
+    <!-- MENÚ MÓVIL -->
+     <div id="menuOffcanvas" class="shadow-lg shadow-black/30 fixed top-0 right-0 h-full w-3/4 max-w-sm bg-[#275c74] text-white transform translate-x-full transition-transform duration-500 ease-in-out z-[999] flex flex-col justify-between">
+    <div>
+        <div class="flex justify-between items-center p-5 border-b border-white/20">
+            <h2 class="li_titulos">Menú</h2>
+            <button id="btnCerrar">
+                <img src="assets/img/icons8-x-50.png" class="h-6.5 w-8" alt="cerrar">
+            </button>
+        </div>
+
+        <ul class="flex flex-col gap-6 p-6 text-lg">
+            <li class="styles_li"><a href="#" class="hover:text-[#12b1be]">Inicio</a></li>
+            <li class="styles_li"><a href="#" class="hover:text-[#12b1be]">Perfumes</a><img src="assets/img/icons8-más-de-50.png" class="relative top-[1.5px] w-3 h-3" alt=""></li>
+            <li class="styles_li"><a href="#" class="hover:text-[#12b1be]">Cuidado Personal</a><img src="assets/img/icons8-más-de-50.png" class="relative top-[1.5px] w-3 h-3" alt=""></li>
+            <li class="styles_li"><a href="#" class="hover:text-[#12b1be]">Dermocosmetica</a><img src="assets/img/icons8-más-de-50.png" class="relative top-[1.5px] w-3 h-3" alt=""></li>
+            <li class="styles_li"><a href="#" class="hover:text-[#12b1be]">Medicamentos</a><img src="assets/img/icons8-más-de-50.png" class="relative top-[1.5px] w-3 h-3" alt=""></li>
+            <li class="styles_li"><a href="#" class="hover:text-[#12b1be]">Bebes</a><img src="assets/img/icons8-más-de-50.png" class="relative top-[1.5px] w-3 h-3" alt=""></li>
+             <li class="styles_li"><a href="#" class="hover:text-[#12b1be]">Bebes</a><img src="assets/img/icons8-más-de-50.png" class="relative top-[1.5px] w-3 h-3" alt=""></li>
+        </ul>
+
+        <div class="flex min-w-4/5 m-5 justify-center items-center gap-2 p-3 rounded-xl bg-white shadow-black shadow-lg">
+            <button class="font-family-base text-black cursor-pointer">Contactar Ahora</button>
+        </div>
+        <div class="flex min-w-4/5 m-5 justify-center items-center gap-2 p-3 rounded-xl bg-[#12b1be] shadow-black shadow-lg">
+            <button class="font-family-base text-black cursor-pointer">Reservar Cita</button>
+        </div>
+        <div class="text-center text-white/80 text-sm mt-4 italic">
+            <p>“Tu salud, nuestra prioridad.”</p>
+        </div>
+
+    </div>
+    <footer class="bg-[#1e4d5f] text-white text-sm py-7 px-5">
+        <p class="font-semibold mb-2">Dirección:</p>
+        <p class="text-[#cbd5e1] text-xs">Av. Siempre Viva 742, Buenos Aires</p>
+        <div class="flex justify-around mt-3">
+            <img src="assets/img/icons8-whatsapp-48.png" class="w-6 h-6" alt="">
+            <img src="assets/img/icons8-facebook-nuevo-48.png" class="w-6 h-6" alt="">
+            <img src="assets/img/icons8-instagram-48.png" class="w-6 h-6" alt="">
+        </div>
+        <p class="text-center text-xs text-gray-300 mt-4">© 2025 Farmacia Luz. Todos los derechos reservados.</p>
+    </footer>
+</div>
+
     <main>
         <section class="section1">
             <div class="flex m-3 flex-wrap">
-                <div class="flex flex-col gap-2 justify-start">
+                <div class="flex flex-col gap-2 justify-start mt-25">
                     <h2 class="font-bold text-4xl font-family-base">Tu salud es nuestra prioridad</h2>
-                    <p class="font-family-base text-[18px]">Farmacia de confianza con más de 25 años de experiencia. Atención personalizada, productos de calidad y servicios profesionales para toda la familia.</p>
-                    <div class="flex mt-5  bg-[#12b1be] w-full rounded-xl justify-center items-center gap-2 w-40 p-3">
+                    <p class="font-family-base text-[18px] mt-3 mb-3">Farmacia de confianza con más de 25 años de experiencia. Atención personalizada, productos de calidad y servicios profesionales para toda la familia.</p>
+                    <div class="flex w-full  justify-center items-center gap-2 p-3 rounded-xl bg-[#12b1be]">
                         <button class="font-family-base text-white cursor-pointer">Ver Productos</button>
                         <img class="w-5 h-5" src="assets/img/icons8-flecha-24(2).png" alt="">
                     </div>
-                    <div class="flex w-full w-full justify-center items-center gap-2 p-3 rounded-xl bg-white  shadow-black shadow-lg">
+                    <div class="flex w-full  justify-center items-center gap-2 p-3 rounded-xl bg-white  shadow-black shadow-lg">
                         <button class="font-family-base text-black cursor-pointer">Contactar Ahora</button>
                     </div>
                     <div class="flex mt-10 justify-start m-3.5 gap-3 items-center">
