--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <li class="styles_li"><a href="#" class="hover:text-[#12b1be]">Cuidado Personal</a><img src="assets/img/icons8-más-de-50.png" class="relative top-[1.5px] w-3 h-3" alt=""></li>
             <li class="styles_li"><a href="#" class="hover:text-[#12b1be]">Dermocosmetica</a><img src="assets/img/icons8-más-de-50.png" class="relative top-[1.5px] w-3 h-3" alt=""></li>
             <li class="styles_li"><a href="#" class="hover:text-[#12b1be]">Medicamentos</a><img src="assets/img/icons8-más-de-50.png" class="relative top-[1.5px] w-3 h-3" alt=""></li>
+            <li class="styles_li"><a href="#" class="hover:text-[#12b1be]">Cabello</a><img src="assets/img/icons8-más-de-50.png" class="relative top-[1.5px] w-3 h-3" alt=""></li>
             <li class="styles_li"><a href="#" class="hover:text-[#12b1be]">Bebes</a><img src="assets/img/icons8-más-de-50.png" class="relative top-[1.5px] w-3 h-3" alt=""></li>
-             <li class="styles_li"><a href="#" class="hover:text-[#12b1be]">Bebes</a><img src="assets/img/icons8-más-de-50.png" class="relative top-[1.5px] w-3 h-3" alt=""></li>
         </ul>
 
         <div class="flex min-w-4/5 m-5 justify-center items-center gap-2 p-3 rounded-xl bg-white shadow-black shadow-lg">
@@ -62,10 +62,6 @@
         <div class="flex min-w-4/5 m-5 justify-center items-center gap-2 p-3 rounded-xl bg-[#12b1be] shadow-black shadow-lg">
             <button class="font-family-base text-black cursor-pointer">Reservar Cita</button>
         </div>
-        <div class="text-center text-white/80 text-sm mt-4 italic">
-            <p>“Tu salud, nuestra prioridad.”</p>
-        </div>
-
     </div>
     <footer class="bg-[#1e4d5f] text-white text-sm py-7 px-5">
         <p class="font-semibold mb-2">Dirección:</p>
@@ -78,7 +74,6 @@
         <p class="text-center text-xs text-gray-300 mt-4">© 2025 Farmacia Luz. Todos los derechos reservados.</p>
     </footer>
 </div>
-
     <main>
         <section class="section1">
             <div class="flex m-3 flex-wrap">
@@ -128,6 +123,74 @@
                     <div class="absolute bottom-[-20px] right-5 bg-white rounded-2xl shadow-lg px-5 py-3">
                         <h3 class="text-3xl font-bold text-[#009FB7]">25+</h3>
                         <p class="text-sm text-gray-700">Años de experiencia</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section2 mt-10 bg-[#99c1cf] py-10 px-5">
+            <div class="flex justify-center items-center flex-col gap-5">
+                <h4 class="rounded-4xl text-xs bg-[#12b1be] text-white p-2">Promociones Activas</h4>
+                <h2 class="font-bold text-3xl font-family-base mt-2">Ofertas Especiales</h2>
+                <p class="text-xs font-family-base text-gray-700">Aprovecha nuestra promociones exclusivas</p>
+                <div class="flex flex-wrap gap-4">
+                    <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
+                        <div class="p-5">
+                            <img src="assets/img/NATARG-93619_1-removebg-preview.png" alt="" class="transition-all duration-300 hover:scale-105 drop-shado[0_0_10px_white] hover:drop-shadow-[0_0_20px_white]"/>
+                            <a href="#">
+                                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Perfumes</h5>
+                            </a>
+                            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order.</p>
+                            <a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                                Read more
+                                <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
+                        <div class="p-5">
+                            <img src="assets/img/dermo-removebg-preview.png" alt="" class="transition-all duration-300 hover:scale-105 drop-shado[0_0_10px_white] hover:drop-shadow-[0_0_20px_white]"/>
+                            <a href="#">
+                                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Dermocosmetica</h5>
+                            </a>
+                            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order.</p>
+                            <a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                                Read more
+                                <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
+                        <div class="p-5">
+                            <img src="assets/img/262602-1200-auto-removebg-preview.png" alt="" class="transition-all duration-300 hover:scale-105 drop-shado[0_0_10px_white] hover:drop-shadow-[0_0_20px_white]"/>
+                            <a href="#">
+                                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Medicamentos</h5>
+                            </a>
+                            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order.</p>
+                            <a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                                Read more
+                                <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
+                        <div class="p-5">
+                            <a href="#">
+                                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Noteworthy technology acquisitions 2021</h5>
+                            </a>
+                            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order.</p>
+                            <a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                                Read more
+                                <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                                </svg>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
