--- a/paginas.html/cuidado-personal.html
+++ b/paginas.html/cuidado-personal.html
@@ -72,23 +72,347 @@
         </div>
 
         <footer class="bg-[#1e4d5f] text-white text-sm py-7 px-5">
-            <p class="font-semibold mb-2">Dirección:</p>
+<!-- Carrusel de productos FACIAL -->
             <p class="text-[#cbd5e1] text-xs">Av. Siempre Viva 742, Buenos Aires</p>
             <div class="flex justify-around mt-3">
                 <img src="../assets/img/icons8-whatsapp-48.png" class="w-6 h-6" alt="">
                 <img src="../assets/img/icons8-facebook-nuevo-48.png" class="w-6 h-6" alt="">
                 <img src="../assets/img/icons8-instagram-48.png" class="w-6 h-6" alt="">
-            </div>
+      <!-- CARD 1 -->
             <p class="text-center text-xs text-gray-300 mt-4">© 2025 Farmacia Luz. Todos los derechos reservados.</p>
         </footer>
     </div>
+<!-- CATEGORÍAS DE CUIDADO PERSONAL -->
+<div id="categorias-carousel" class="relative w-full max-w-5xl mx-auto py-10 mt-24" data-carousel="static">
+  <div class="relative overflow-hidden">
+    <div class="flex justify-center items-center gap-10 px-6 md:px-10 overflow-x-auto no-scrollbar">
 
-    <!-- CONTENIDO PRINCIPAL -->
-    <main class="pt-28 pb-16 px-4">
-        <section class="text-center mb-10">
-            <h1 class="text-4xl font-bold mb-2 text-[#275c74]">Cuidado Personal</h1>
-            <p class="text-gray-600 max-w-2xl mx-auto font-family-base">
-                Encuentra medicamentos de confianza, recetados y de venta libre, con los mejores precios y atención profesional.
-            </p>
-        </section>
-          <script src="../index.js"></script>
+      <!-- FACIAL -->
+      <a href="#facial" class="flex flex-col items-center text-center w-28 shrink-0 cursor-pointer hover:scale-105 transition-transform">
+        <img src="../assets/img/facial-treatment_9097389.png" alt="Cuidado Facial" class="w-16 h-16 mb-2">
+        <p class="text-gray-700 font-medium">Facial</p>
+      </a>
+
+      <!-- CORPORAL -->
+      <a href="#corporal" class="flex flex-col items-center text-center w-28 shrink-0 cursor-pointer hover:scale-105 transition-transform">
+        <img src="../assets/img/slim-body_2696914.png" alt="Cuidado Corporal" class="w-16 h-16 mb-2">
+        <p class="text-gray-700 font-medium">Corporal</p>
+      </a>
+
+      <!-- OCULAR -->
+      <a href="#ocular" class="flex flex-col items-center text-center w-28 shrink-0 cursor-pointer hover:scale-105 transition-transform">
+        <img src="../assets/img/eye_879278.png" alt="Cuidado Ocular" class="w-16 h-16 mb-2">
+        <p class="text-gray-700 font-medium">Ocular</p>
+      </a>
+
+      <!-- CAPILAR -->
+      <a href="#capilar" class="flex flex-col items-center text-center w-28 shrink-0 cursor-pointer hover:scale-105 transition-transform">
+        <img src="../assets/img/like_5498572.png" alt="Cuidado Capilar" class="w-16 h-16 mb-2">
+        <p class="text-gray-700 font-medium">Capilar</p>
+      </a>
+
+
+    </div>
+  </div>
+</div>
+
+
+<main class="pt-28 pb-16 px-4">
+
+  <!--  CUIDADO FACIAL -->
+  <section id="facial" class="scroll-mt-28 py-12">
+    <!-- Franja del título -->
+    <div class="bg-[#c9f1e2] py-4 mb-8">
+      <h2 class="text-3xl font-bold text-[#275c74] text-center uppercase tracking-wide">
+        Cuidado Facial
+      </h2>
+    </div>
+
+    <!-- Contenido debajo -->
+    <div class="max-w-6xl mx-auto px-6 text-center">
+      <p class="text-gray-600 mb-6 max-w-2xl mx-auto">
+    DESCRIPCION DE CUIDADO FACIAL, aca va a ver productos jeje
+      </p>
+      <!--  Carrusel de productos FACIAL -->
+<div id="carousel-facial" class="relative w-full max-w-6xl mx-auto py-6" data-carousel="static">
+  <div class="relative overflow-hidden">
+    <!-- Contenedor deslizable -->
+    <div class="flex gap-6 px-6 overflow-x-auto no-scrollbar snap-x snap-mandatory">
+
+      <!--  CARD 1 -->
+      <div class="snap-start bg-white border border-gray-200 rounded-xl shadow-sm flex-shrink-0 w-72 p-4 hover:shadow-md transition">
+        <img src="../assets/img/facial-treatment_9097389.png" alt="Crema Facial" class="w-40 h-40 object-contain mx-auto mb-4">
+        <h3 class="text-lg font-semibold text-gray-800 mb-1">Crema Hidratante Facial</h3>
+        <p class="text-sm text-gray-500 mb-2">Nutre y suaviza la piel seca.</p>
+        <p class="text-xl font-bold text-[#275c74] mb-3">$12.500</p>
+        <button class="border border-[#12b1be] text-[#12b1be] hover:bg-[#12b1be] hover:text-white transition-all font-medium w-full py-2 rounded-lg">
+          Agregar
+        </button>
+      </div>
+
+      <!-- CARD 2 -->
+      <div class="snap-start bg-white border border-gray-200 rounded-xl shadow-sm flex-shrink-0 w-72 p-4 hover:shadow-md transition">
+        <img src="../assets/img/eye_879278.png" alt="Sérum" class="w-40 h-40 object-contain mx-auto mb-4">
+        <h3 class="text-lg font-semibold text-gray-800 mb-1">Sérum Antiarrugas</h3>
+        <p class="text-sm text-gray-500 mb-2">Con ácido hialurónico.</p>
+        <p class="text-xl font-bold text-[#275c74] mb-3">$9.990</p>
+        <button class="border border-[#12b1be] text-[#12b1be] hover:bg-[#12b1be] hover:text-white transition-all font-medium w-full py-2 rounded-lg">
+          Agregar
+        </button>
+      </div>
+
+      <!--  CARD 3 -->
+      <div class="snap-start bg-white border border-gray-200 rounded-xl shadow-sm flex-shrink-0 w-72 p-4 hover:shadow-md transition">
+        <img src="../assets/img/like_5498572.png" alt="Mascarilla" class="w-40 h-40 object-contain mx-auto mb-4">
+        <h3 class="text-lg font-semibold text-gray-800 mb-1">Mascarilla Facial Detox</h3>
+        <p class="text-sm text-gray-500 mb-2">Purifica y limpia profundamente.</p>
+        <p class="text-xl font-bold text-[#275c74] mb-3">$7.200</p>
+        <button class="border border-[#12b1be] text-[#12b1be] hover:bg-[#12b1be] hover:text-white transition-all font-medium w-full py-2 rounded-lg">
+          Agregar
+        </button>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- Botones de navegación -->
+  <button type="button" class="absolute top-1/2 left-0 -translate-y-1/2 bg-white shadow rounded-full p-2 hover:bg-gray-100" data-carousel-prev>
+    <svg class="w-4 h-4 text-gray-800" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7" />
+    </svg>
+  </button>
+
+  <button type="button" class="absolute top-1/2 right-0 -translate-y-1/2 bg-white shadow rounded-full p-2 hover:bg-gray-100" data-carousel-next>
+    <svg class="w-4 h-4 text-gray-800" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
+    </svg>
+  </button>
+</div>
+
+    </div>
+  </section>
+
+  <!--  CUIDADO CORPORAL -->
+  <section id="corporal" class="scroll-mt-28 py-12">
+    <div class="bg-[#e0f4f8] py-4 mb-8">
+      <h2 class="text-3xl font-bold text-[#275c74] text-center uppercase tracking-wide">
+        Cuidado Corporal
+      </h2>
+    </div>
+
+    <div class="max-w-6xl mx-auto px-6 text-center">
+      <p class="text-gray-600 mb-6 max-w-2xl mx-auto">
+        aca va a ver productos jeje
+  </p>
+<!-- Carrusel de productos FACIAL -->
+<div id="carousel-corporal" class="relative w-full max-w-6xl mx-auto py-6" data-carousel="static">
+  <div class="relative overflow-hidden" id="carousel-corporal">
+    <!-- Contenedor deslizable -->
+    <div class="flex gap-6 px-6 overflow-x-auto no-scrollbar snap-x snap-mandatory">
+
+    <!-- CARD 1 -->
+      <div class="snap-start bg-white border border-gray-200 rounded-xl shadow-sm flex-shrink-0 w-72 p-4 hover:shadow-md transition">
+        <img src="../assets/img/facial-treatment_9097389.png" alt="Crema Facial" class="w-40 h-40 object-contain mx-auto mb-4">
+        <h3 class="text-lg font-semibold text-gray-800 mb-1">Crema Hidratante Facial</h3>
+        <p class="text-sm text-gray-500 mb-2">Nutre y suaviza la piel seca.</p>
+        <p class="text-xl font-bold text-[#275c74] mb-3">$12.500</p>
+        <button class="border border-[#12b1be] text-[#12b1be] hover:bg-[#12b1be] hover:text-white transition-all font-medium w-full py-2 rounded-lg">
+          Agregar
+        </button>
+      </div>
+
+  <!-- CARD 2 -->
+      <div class="snap-start bg-white border border-gray-200 rounded-xl shadow-sm flex-shrink-0 w-72 p-4 hover:shadow-md transition">
+        <img src="../assets/img/eye_879278.png" alt="Sérum" class="w-40 h-40 object-contain mx-auto mb-4">
+        <h3 class="text-lg font-semibold text-gray-800 mb-1">Sérum Antiarrugas</h3>
+        <p class="text-sm text-gray-500 mb-2">Con ácido hialurónico.</p>
+        <p class="text-xl font-bold text-[#275c74] mb-3">$9.990</p>
+        <button class="border border-[#12b1be] text-[#12b1be] hover:bg-[#12b1be] hover:text-white transition-all font-medium w-full py-2 rounded-lg">
+          Agregar
+        </button>
+      </div>
+
+  <!-- CARD 3 -->
+      <div class="snap-start bg-white border border-gray-200 rounded-xl shadow-sm flex-shrink-0 w-72 p-4 hover:shadow-md transition">
+        <img src="../assets/img/like_5498572.png" alt="Mascarilla" class="w-40 h-40 object-contain mx-auto mb-4">
+        <h3 class="text-lg font-semibold text-gray-800 mb-1">Mascarilla Facial Detox</h3>
+        <p class="text-sm text-gray-500 mb-2">Purifica y limpia profundamente.</p>
+        <p class="text-xl font-bold text-[#275c74] mb-3">$7.200</p>
+        <button class="border border-[#12b1be] text-[#12b1be] hover:bg-[#12b1be] hover:text-white transition-all font-medium w-full py-2 rounded-lg">
+          Agregar
+        </button>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- Botones de navegación -->
+  <button type="button" class="absolute top-1/2 left-0 -translate-y-1/2 bg-white shadow rounded-full p-2 hover:bg-gray-100" data-carousel-prev>
+    <svg class="w-4 h-4 text-gray-800" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7" />
+    </svg>
+  </button>
+
+  <button type="button" class="absolute top-1/2 right-0 -translate-y-1/2 bg-white shadow rounded-full p-2 hover:bg-gray-100" data-carousel-next>
+    <svg class="w-4 h-4 text-gray-800" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
+    </svg>
+  </button>
+</div>
+
+    </div>
+  </section>
+
+  <!--  CUIDADO OCULAR -->
+  <section id="ocular" class="scroll-mt-28 py-12">
+    <div class="bg-[#c9f1e2] py-4 mb-8">
+      <h2 class="text-3xl font-bold text-[#275c74] text-center uppercase tracking-wide">
+        Cuidado Ocular
+      </h2>
+    </div>
+
+    <div class="max-w-6xl mx-auto px-6 text-center">
+      <p class="text-gray-600 mb-6 max-w-2xl mx-auto">
+        aca va a ver productos jeje
+      </p>
+<!-- Carrusel de productos FACIAL -->
+<div id="carousel-ocular" class="relative w-full max-w-6xl mx-auto py-6" data-carousel="static">
+  <div class="relative overflow-hidden" id="carousel-ocular">
+    <!-- Contenedor deslizable -->
+    <div class="flex gap-6 px-6 overflow-x-auto no-scrollbar snap-x snap-mandatory">
+
+    <!-- CARD 1 -->
+      <div class="snap-start bg-white border border-gray-200 rounded-xl shadow-sm flex-shrink-0 w-72 p-4 hover:shadow-md transition">
+        <img src="../assets/img/facial-treatment_9097389.png" alt="Crema Facial" class="w-40 h-40 object-contain mx-auto mb-4">
+        <h3 class="text-lg font-semibold text-gray-800 mb-1">Crema Hidratante Facial</h3>
+        <p class="text-sm text-gray-500 mb-2">Nutre y suaviza la piel seca.</p>
+        <p class="text-xl font-bold text-[#275c74] mb-3">$12.500</p>
+        <button class="border border-[#12b1be] text-[#12b1be] hover:bg-[#12b1be] hover:text-white transition-all font-medium w-full py-2 rounded-lg">
+          Agregar
+        </button>
+      </div>
+
+  <!-- CARD 2 -->
+      <div class="snap-start bg-white border border-gray-200 rounded-xl shadow-sm flex-shrink-0 w-72 p-4 hover:shadow-md transition">
+        <img src="../assets/img/eye_879278.png" alt="Sérum" class="w-40 h-40 object-contain mx-auto mb-4">
+        <h3 class="text-lg font-semibold text-gray-800 mb-1">Sérum Antiarrugas</h3>
+        <p class="text-sm text-gray-500 mb-2">Con ácido hialurónico.</p>
+        <p class="text-xl font-bold text-[#275c74] mb-3">$9.990</p>
+        <button class="border border-[#12b1be] text-[#12b1be] hover:bg-[#12b1be] hover:text-white transition-all font-medium w-full py-2 rounded-lg">
+          Agregar
+        </button>
+      </div>
+
+  <!-- CARD 3 -->
+      <div class="snap-start bg-white border border-gray-200 rounded-xl shadow-sm flex-shrink-0 w-72 p-4 hover:shadow-md transition">
+        <img src="../assets/img/like_5498572.png" alt="Mascarilla" class="w-40 h-40 object-contain mx-auto mb-4">
+        <h3 class="text-lg font-semibold text-gray-800 mb-1">Mascarilla Facial Detox</h3>
+        <p class="text-sm text-gray-500 mb-2">Purifica y limpia profundamente.</p>
+        <p class="text-xl font-bold text-[#275c74] mb-3">$7.200</p>
+        <button class="border border-[#12b1be] text-[#12b1be] hover:bg-[#12b1be] hover:text-white transition-all font-medium w-full py-2 rounded-lg">
+          Agregar
+        </button>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- Botones de navegación -->
+  <button type="button" class="absolute top-1/2 left-0 -translate-y-1/2 bg-white shadow rounded-full p-2 hover:bg-gray-100" data-carousel-prev>
+    <svg class="w-4 h-4 text-gray-800" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7" />
+    </svg>
+  </button>
+
+  <button type="button" class="absolute top-1/2 right-0 -translate-y-1/2 bg-white shadow rounded-full p-2 hover:bg-gray-100" data-carousel-next>
+    <svg class="w-4 h-4 text-gray-800" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
+    </svg>
+  </button>
+</div>
+
+    </div>
+  </section>
+
+  <!--  CUIDADO CAPILAR -->
+  <section id="capilar" class="scroll-mt-28 py-12">
+    <div class="bg-[#e0f4f8] py-4 mb-8">
+      <h2 class="text-3xl font-bold text-[#275c74] text-center uppercase tracking-wide">
+        Cuidado Capilar
+      </h2>
+    </div>
+
+    <div class="max-w-6xl mx-auto px-6 text-center">
+      <p class="text-gray-600 mb-6 max-w-2xl mx-auto">
+        aca va a ver productos jeje
+      </p>
+  <!-- Carrusel de productos FACIAL -->
+<div id="carousel-capilar" class="relative w-full max-w-6xl mx-auto py-6" data-carousel="static">
+  <div class="relative overflow-hidden" id="carousel-capilar">
+    <!-- Contenedor deslizable -->
+    <div class="flex gap-6 px-6 overflow-x-auto no-scrollbar snap-x snap-mandatory">
+
+    <!-- CARD 1 -->
+      <div class="snap-start bg-white border border-gray-200 rounded-xl shadow-sm flex-shrink-0 w-72 p-4 hover:shadow-md transition">
+        <img src="../assets/img/facial-treatment_9097389.png" alt="Crema Facial" class="w-40 h-40 object-contain mx-auto mb-4">
+        <h3 class="text-lg font-semibold text-gray-800 mb-1">Crema Hidratante Facial</h3>
+        <p class="text-sm text-gray-500 mb-2">Nutre y suaviza la piel seca.</p>
+        <p class="text-xl font-bold text-[#275c74] mb-3">$12.500</p>
+        <button class="border border-[#12b1be] text-[#12b1be] hover:bg-[#12b1be] hover:text-white transition-all font-medium w-full py-2 rounded-lg">
+          Agregar
+        </button>
+      </div>
+
+  <!-- CARD 2 -->
+      <div class="snap-start bg-white border border-gray-200 rounded-xl shadow-sm flex-shrink-0 w-72 p-4 hover:shadow-md transition">
+        <img src="../assets/img/eye_879278.png" alt="Sérum" class="w-40 h-40 object-contain mx-auto mb-4">
+        <h3 class="text-lg font-semibold text-gray-800 mb-1">Sérum Antiarrugas</h3>
+        <p class="text-sm text-gray-500 mb-2">Con ácido hialurónico.</p>
+        <p class="text-xl font-bold text-[#275c74] mb-3">$9.990</p>
+        <button class="border border-[#12b1be] text-[#12b1be] hover:bg-[#12b1be] hover:text-white transition-all font-medium w-full py-2 rounded-lg">
+          Agregar
+        </button>
+      </div>
+
+  <!-- CARD 3 -->
+      <div class="snap-start bg-white border border-gray-200 rounded-xl shadow-sm flex-shrink-0 w-72 p-4 hover:shadow-md transition">
+        <img src="../assets/img/like_5498572.png" alt="Mascarilla" class="w-40 h-40 object-contain mx-auto mb-4">
+        <h3 class="text-lg font-semibold text-gray-800 mb-1">Mascarilla Facial Detox</h3>
+        <p class="text-sm text-gray-500 mb-2">Purifica y limpia profundamente.</p>
+        <p class="text-xl font-bold text-[#275c74] mb-3">$7.200</p>
+        <button class="border border-[#12b1be] text-[#12b1be] hover:bg-[#12b1be] hover:text-white transition-all font-medium w-full py-2 rounded-lg">
+          Agregar
+        </button>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- Botones de navegación -->
+  <button type="button" class="absolute top-1/2 left-0 -translate-y-1/2 bg-white shadow rounded-full p-2 hover:bg-gray-100" data-carousel-prev>
+    <svg class="w-4 h-4 text-gray-800" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7" />
+    </svg>
+  </button>
+
+  <button type="button" class="absolute top-1/2 right-0 -translate-y-1/2 bg-white shadow rounded-full p-2 hover:bg-gray-100" data-carousel-next>
+    <svg class="w-4 h-4 text-gray-800" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
+    </svg>
+  </button>
+</div>
+
+    </div>
+  </section>
+
+
+
+  <script src="../index.js"></script>
+</main>
+
+</body>
+</html>
+                    
+
+
+
